@@ -1316,6 +1316,16 @@ allow_empty_hostgroup_assignment=0
 
 
 
+# DISABLE SERVICE CHECKS WHEN HOST DOWN
+# This option will disable all service checks if the host is not in an UP state
+#
+# While desirable in some environments, enabling this value can distort report
+# values as the expected quantity of checks will not have been performed
+
+#host_down_disable_service_checks=0
+
+
+
 # EXPERIMENTAL load controlling options
 # To get current defaults based on your system issue a command to
 # the query handler. Please note that this is an experimental feature
